# Trend-Korea-2026N

./: .env.example  .gitignore  LICENSE  README-ko.md  README.md  pyproject.toml
datasets/: economy_news_2025.csv  monthly_news_keywords_2025.csv  news_keywords_2025.csv  total_news_2025.csv
preprocessed/: economy_top10_keywords.csv  top10_monthly_timeseries.csv  wordcloud_top_keywords.csv
src/: analysis_tables.py  browser_client.py  crawler.py  data_processing.py  insight_agent.py  keyword_monthly_agg.py  logger.py  main.py  storage.py  streamlit_app.py  utils.py  visualization.py
stopwords/: ko_news_stopwords.txt
